--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,28 @@ html{
 *, *::after, *::before{
   box-sizing: inherit;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 body{
   padding: 0;
   margin: 0;
-  font-family: "Rubik", "Arial", sans-serif;
+  font-family: monospace, sans-serif;
   font-weight: 500;
   font-size: 19px;
   line-height: 23px;
   color: #515151;
+  background-color: #F7CD75;
 }
 .visually-hidden {
   position: absolute;
@@ -27,4 +41,76 @@ body{
 img{
   max-width: 100%;
   display: block;
+}
+.conatiner{
+  max-width: 900px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.pizza-form {
+  width: 100%;
+  display: flex;
+}
+.heading {
+  text-align: center;
+  font-weight: bold;
+}
+
+.pizza-form__options {
+  width: 70%;
+  height: 500px;
+  padding: 30px;
+  background-color: #F2F2F2;
+  overflow-y: scroll;
+}
+.pizza-form__group{
+  margin-bottom: 30px;
+}
+.option-title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 15px;
+  color: #222;
+  font-size: 19px;
+  font-weight: bold;
+}
+.bread-input{
+  width: 250px;
+  padding: 5px;
+  font-size: 16px;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid #222;
+}
+.bread-cost{
+  position: relative;
+  right: 0;
+  font-size: 10px;
+}
+
+/* size  */
+.size-checkbox__control{
+  width: 105px;
+  height: 105px;
+  position: relative;
+  display: inline-flex;
+  padding: 3px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px solid #222;
+  background-color: #fff;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 16px;
+}
+.size-checkbox__control small{
+  font-size: 18px;
+  color: red;
+}
+.size-checkbox__input:checked ~ .size-checkbox__control{
+  background-color: yellow;
+  box-shadow: 0px 1px 6px 2px #9e9eb1;
 }
